align, design, responsiveness fixed

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Spartan:100,400,700);
+@import url(https://fonts.googleapis.com/css?family=Spartan:100,400,500,700);
 
 *
 {
@@ -7,3 +7,218 @@
     font-family: 'Spartan', Helvetica, monospace;
 }
 
+body
+{
+    background: url(../images/bg-pattern-top-desktop.svg) no-repeat top left;
+    background-size: 30rem;
+}
+
+.container 
+{
+    background: url(../images/bg-pattern-bottom-desktop.svg) no-repeat bottom right;
+    background-size: 65rem; 
+    margin: 0 auto;
+    height: 100vh;
+    width: 100%; 
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+header
+{
+    grid-column: 1 / 3;
+    margin: 70px 120px; 
+}
+
+h1 
+{
+    color: hsl(300, 43%, 22%);
+    font-size: 2.5rem;
+    padding: 1rem 0;
+
+}
+
+h2 
+{
+    color: hsl(303, 10%, 53%);
+    font-size: 0.8rem;
+    font-weight: 500;
+    width: 90%; 
+}
+
+section
+{
+    margin: 0 auto;
+}
+
+.cards 
+{
+    display: flex;
+    grid-column: 1 / -1;
+    width: 85%;
+    margin: -5rem auto 0;
+}
+
+.scores
+{
+    grid-column: 3 / -1;
+    margin: 88px 0 0;
+    position: relative;
+    right: 175px;
+}
+
+.bubble 
+{
+    background-color:hsl(300, 24%, 96%); 
+    display: flex;
+    padding: 1rem 0.5rem;
+    width: 340px;
+    border-radius: 7px;
+    margin: 1rem auto; 
+    font-weight: 700;
+    color: hsl(300, 43%, 22%);
+    font-size: 0.8rem;
+}
+
+.report
+{
+    margin: 1rem 200px;
+}
+
+.tech 
+{
+    margin: 1rem 260px ;
+}
+
+.stars 
+{
+    padding: 0 1rem;
+}
+
+article
+{
+    background-color: hsl(300, 43%, 22%);
+    color: #fff;
+    display: grid;
+    margin: 1rem 1rem;
+    padding: 2rem 0.5rem; 
+    border-radius: 7px;
+    grid-template-columns: repeat(5, 1fr); 
+    height: 150px;
+}
+
+article img 
+{
+    border-radius: 50%;
+    height: 42px;
+    margin: 9px 24px;
+}
+
+article h4 
+{
+    grid-column: 2 / -1;
+    display: flex;
+    flex-direction: column;
+    margin: 13px 0;
+    font-size: 0.85rem;
+}
+
+article h4 span
+{
+    color: hsl(333, 80%, 67%);
+    font-weight: 400;
+
+}
+
+article p 
+{
+    grid-column: 1 / -1;
+    padding: 1rem 0.5rem;
+    font-size: 0.8rem;
+}
+
+.second 
+{
+    margin: 2rem 1rem;
+}
+
+.third
+{
+    margin: 3rem 1rem;
+}
+
+@media (max-width: 991px)
+{
+
+    body 
+    {
+        background: url(../images/bg-pattern-top-mobile.svg) no-repeat top left;
+    }
+
+    .container
+    {
+        display: flex;
+        flex-direction: column;  
+        background: url(../images/bg-pattern-bottom-mobile.svg) no-repeat bottom right;
+        background-size: 100px;      
+    }
+
+    header 
+    {
+        text-align: center;
+        margin: 0 auto;
+        padding: 2rem 1rem;    
+    }
+
+    h2 
+    {
+        width: 100%;
+        padding: 0 0.5rem;
+    }
+
+    .scores
+    {
+        margin: 0 auto 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+    }
+
+    .bubble 
+    {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        text-align: center;
+        margin: 0 auto;
+        
+    }
+
+    .report 
+    {
+        margin: 1rem auto;
+    }
+
+    .tech 
+    {
+        margin: 1rem auto;
+    }
+
+    .cards 
+    {
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+    }
+
+    article,
+    .second, 
+    .third 
+    {
+        margin: 1rem 0;
+    }
+
+
+} 
